hdone/objects/Schedule_Development__c.object
<CustomObject>
    <description>Used to create schedules for multiple items.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of schedule</description>
        <inlineHelpText>Description of schedule</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End Date for Schedules</description>
        <inlineHelpText>End Date for Schedules</inlineHelpText>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>End time for schedule</description>
        <inlineHelpText>End time for schedule</inlineHelpText>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Start_Time__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>8:00:00</fullName>
                </value>
                <value>
                    <fullName>8:15:00</fullName>
                </value>
                <value>
                    <fullName>8:30:00</fullName>
                </value>
                <value>
                    <fullName>8:45:00</fullName>
                </value>
                <value>
                    <fullName>9:00:00</fullName>
                </value>
                <value>
                    <fullName>9:15:00</fullName>
                </value>
                <value>
                    <fullName>9:30:00</fullName>
                </value>
                <value>
                    <fullName>9:45:00</fullName>
                </value>
                <value>
                    <fullName>10:00:00</fullName>
                </value>
                <value>
                    <fullName>10:15:00</fullName>
                </value>
                <value>
                    <fullName>10:30:00</fullName>
                </value>
                <value>
                    <fullName>10:45:00</fullName>
                </value>
                <value>
                    <fullName>11:00:00</fullName>
                </value>
                <value>
                    <fullName>11:15:00</fullName>
                </value>
                <value>
                    <fullName>11:30:00</fullName>
                </value>
                <value>
                    <fullName>11:45:00</fullName>
                </value>
                <value>
                    <fullName>12:00:00</fullName>
                </value>
                <value>
                    <fullName>12:15:00</fullName>
                </value>
                <value>
                    <fullName>12:30:00</fullName>
                </value>
                <value>
                    <fullName>12:45:00</fullName>
                </value>
                <value>
                    <fullName>13:00:00</fullName>
                </value>
                <value>
                    <fullName>13:15:00</fullName>
                </value>
                <value>
                    <fullName>13:30:00</fullName>
                </value>
                <value>
                    <fullName>13:45:00</fullName>
                </value>
                <value>
                    <fullName>14:00:00</fullName>
                </value>
                <value>
                    <fullName>14:15:00</fullName>
                </value>
                <value>
                    <fullName>14:30:00</fullName>
                </value>
                <value>
                    <fullName>14:45:00</fullName>
                </value>
                <value>
                    <fullName>15:00:00</fullName>
                </value>
                <value>
                    <fullName>15:15:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External ID field</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID field</inlineHelpText>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthNum__c</fullName>
        <description>Month number. Was using a formula field for this but having trouble getting Trigger class to recognize value.</description>
        <label>MonthNum</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthNumber__c</fullName>
        <description>Translates textual month into numeric. Used for Apex classes</description>
        <formula>CASE( Month__c , &quot;January&quot;, 1, 
&quot;February&quot;, 2,
&quot;March&quot;, 3,
&quot;April&quot;, 4,
&quot;May&quot;, 5,
&quot;June&quot;, 6,
&quot;July&quot;, 7,
&quot;August&quot;, 8,
&quot;September&quot;, 9,
&quot;October&quot;, 10,
&quot;November&quot;, 11,
&quot;December&quot;, 12,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Month number based on picklist value selected.</inlineHelpText>
        <label>MonthNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Month for scheduling</description>
        <inlineHelpText>Scheduling month</inlineHelpText>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Name__c</fullName>
        <description>Creates schedule names based on field values. Used for selection of record in Flow which currently only displays one field for Dynamic choices.</description>
        <inlineHelpText>Name of schedule</inlineHelpText>
        <label>Schedule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Days__c</fullName>
        <description>Days that schedule should be used.</description>
        <inlineHelpText>Days that schedule should be used.</inlineHelpText>
        <label>Scheduled Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Start Date for Schedule</description>
        <inlineHelpText>Start Date for Schedule</inlineHelpText>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Start time for schedule.</description>
        <inlineHelpText>Start time for schedule.</inlineHelpText>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00:00</fullName>
                </value>
                <value>
                    <fullName>8:15:00</fullName>
                </value>
                <value>
                    <fullName>8:30:00</fullName>
                </value>
                <value>
                    <fullName>8:45:00</fullName>
                </value>
                <value>
                    <fullName>9:00:00</fullName>
                </value>
                <value>
                    <fullName>9:15:00</fullName>
                </value>
                <value>
                    <fullName>9:30:00</fullName>
                </value>
                <value>
                    <fullName>9:45:00</fullName>
                </value>
                <value>
                    <fullName>10:00:00</fullName>
                </value>
                <value>
                    <fullName>10:15:00</fullName>
                </value>
                <value>
                    <fullName>10:30:00</fullName>
                </value>
                <value>
                    <fullName>10:45:00</fullName>
                </value>
                <value>
                    <fullName>11:00:00</fullName>
                </value>
                <value>
                    <fullName>11:15:00</fullName>
                </value>
                <value>
                    <fullName>11:30:00</fullName>
                </value>
                <value>
                    <fullName>11:45:00</fullName>
                </value>
                <value>
                    <fullName>12:00:00</fullName>
                </value>
                <value>
                    <fullName>12:15:00</fullName>
                </value>
                <value>
                    <fullName>12:30:00</fullName>
                </value>
                <value>
                    <fullName>12:45:00</fullName>
                </value>
                <value>
                    <fullName>13:00:00</fullName>
                </value>
                <value>
                    <fullName>13:15:00</fullName>
                </value>
                <value>
                    <fullName>13:30:00</fullName>
                </value>
                <value>
                    <fullName>13:45:00</fullName>
                </value>
                <value>
                    <fullName>14:00:00</fullName>
                </value>
                <value>
                    <fullName>14:15:00</fullName>
                </value>
                <value>
                    <fullName>14:30:00</fullName>
                </value>
                <value>
                    <fullName>14:45:00</fullName>
                </value>
                <value>
                    <fullName>15:00:00</fullName>
                </value>
                <value>
                    <fullName>15:15:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YearNumber__c</fullName>
        <formula>If( ISNUMBER(TEXT( Year__c )) ,  VALUE(TEXT( Year__c )) , Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YearNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Scheduling Year</description>
        <inlineHelpText>Scheduling Year</inlineHelpText>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                    <default>true</default>
                    <label>2015</label>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Schedule Development</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Schedule_Name__c</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Scheduled_Days__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Fridays</fullName>
        <columns>NAME</columns>
        <columns>Schedule_Name__c</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Scheduled_Days__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scheduled_Days__c</field>
            <operation>includes</operation>
            <value>Friday</value>
        </filters>
        <label>Fridays</label>
    </listViews>
    <listViews>
        <fullName>Mondays</fullName>
        <columns>NAME</columns>
        <columns>Schedule_Name__c</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Scheduled_Days__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scheduled_Days__c</field>
            <operation>includes</operation>
            <value>Monday</value>
        </filters>
        <label>Mondays</label>
    </listViews>
    <listViews>
        <fullName>Saturdays</fullName>
        <columns>NAME</columns>
        <columns>Schedule_Name__c</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Scheduled_Days__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scheduled_Days__c</field>
            <operation>includes</operation>
            <value>Saturday</value>
        </filters>
        <label>Saturdays</label>
    </listViews>
    <listViews>
        <fullName>Sundays</fullName>
        <columns>NAME</columns>
        <columns>Schedule_Name__c</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Scheduled_Days__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scheduled_Days__c</field>
            <operation>includes</operation>
            <value>Sunday</value>
        </filters>
        <label>Sundays</label>
    </listViews>
    <listViews>
        <fullName>Thursdays</fullName>
        <columns>NAME</columns>
        <columns>Schedule_Name__c</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Scheduled_Days__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scheduled_Days__c</field>
            <operation>includes</operation>
            <value>Thursday</value>
        </filters>
        <label>Thursdays</label>
    </listViews>
    <listViews>
        <fullName>Tuesdays</fullName>
        <columns>NAME</columns>
        <columns>Schedule_Name__c</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Scheduled_Days__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scheduled_Days__c</field>
            <operation>includes</operation>
            <value>Tuesday</value>
        </filters>
        <label>Tuesdays</label>
    </listViews>
    <listViews>
        <fullName>Wednesdays</fullName>
        <columns>NAME</columns>
        <columns>Schedule_Name__c</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Scheduled_Days__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scheduled_Days__c</field>
            <operation>includes</operation>
            <value>Wednesday</value>
        </filters>
        <label>Wednesdays</label>
    </listViews>
    <nameField>
        <displayFormat>SCHD-{000000}</displayFormat>
        <label>Schedule Development Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Development</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>StartTimeEndTimeEqual</fullName>
        <active>false</active>
        <description>Ensures that Start and End Time are not same. Rule only on End Time</description>
        <errorConditionFormula>Text(Start_Time__c) =  Text(End_Time__c)</errorConditionFormula>
        <errorDisplayField>End_Time__c</errorDisplayField>
        <errorMessage>The Start Time and End Time cannot be the same.  Please ensure the End Time is after the Start Time.</errorMessage>
    </validationRules>
</CustomObject>